--- a/src/assets/styles/Navbar.css
+++ b/src/assets/styles/Navbar.css
@@ -1,19 +1,21 @@
 .navbar {
-  background-color: #060b26;
+  /* background-color: #eceef5; */
   height: 80px;
   display: flex;
   justify-content: start;
   align-items: center;
+  z-index: 2;
 }
 
 .menu-bars {
   margin-left: 2rem;
   font-size: 2rem;
   background: none;
+  z-index: 2;
 }
 
 .nav-menu {
-  background-color: #060b26;
+/*   background-color: #060b26; */
   width: 250px;
   height: 100vh;
   display: flex;
@@ -22,11 +24,14 @@
   top: 0;
   left: -100%;
   transition: 850ms;
+  z-index: 2;
 }
 
 .nav-menu.active {
+  cursor: pointer;
   left: 0;
   transition: 350ms;
+  z-index: 2;
 }
 
 .nav-text {
@@ -51,7 +56,7 @@
 }
 
 .nav-text a:hover {
-  background-color: #1a83ff;
+  background-color: #2b2e2b;
 }
 
 .nav-menu-items {
@@ -59,7 +64,7 @@
 }
 
 .navbar-toggle {
-  background-color: #060b26;
+ /*  background-color: #060b26; */
   width: 100%;
   height: 80px;
   display: flex;
@@ -69,4 +74,9 @@
 
 span {
   margin-left: 16px;
+}
+
+.logo {
+  font-size: 40px;
+  color: white;
 }
