--- a/src/assets/styles/Navbar.css
+++ b/src/assets/styles/Navbar.css
@@ -16,7 +16,7 @@
 
 .nav-menu {
 /*   background-color: #060b26; */
-  width: 250px;
+  width: 200px;
   height: 100vh;
   display: flex;
   justify-content: center;
@@ -56,7 +56,7 @@
 }
 
 .nav-text a:hover {
-  background-color: #2b2e2b;
+  background-color: #3e3f3e;
 }
 
 .nav-menu-items {
