comecei a fazer o MySeries

--- a/src/assets/styles/CreateReview.css
+++ b/src/assets/styles/CreateReview.css
@@ -178,3 +178,13 @@ ul {
   border-radius: 10px;
   border-color: #fff;
 }
+
+.body-input,
+.user-input {
+  color: white;
+}
+
+.user-input,
+.user-input label {
+  color: white !important;
+}
