--- a/src/assets/styles/SerieHub.css
+++ b/src/assets/styles/SerieHub.css
@@ -1,9 +1,15 @@
 .left-SerieHub{
     display: flex;
-    flex-direction: column;
-    padding-left: 15%;
+    flex-direction: row;
+    padding-left: 18%;
     padding-top: 5%;
+    width: 100%;
 
+}
+.left-container{
+    height: 50px;
+    width: 50%;
+ 
 }
 
 
@@ -28,13 +34,21 @@
     z-index: 1; /* Defina um valor maior do que o z-index do .movieTest */
 }
 
+/* SerieHub.css */
+.right-SerieHub {
+    flex-grow: 1;
+
+    padding-left: calc(50% + 1px); /* Ajuste conforme necessário */
+   
+}
+
 .reviews {
     display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-    flex-wrap: wrap;
-    gap: 15px;
-    row-gap: 35px;
-    margin-bottom: 30px;
-
+    flex-direction: column; /* Mude para column para alinhar verticalmente */
+    align-items: flex-start; /* Alinha os itens à esquerda */
+    justify-content: flex-start; /* Inicia o conteúdo no topo */
+    gap: 20px; /* Espaçamento entre reviews */
 }
+
+
+
