--- a/src/assets/styles/SerieHub.css
+++ b/src/assets/styles/SerieHub.css
@@ -44,11 +44,38 @@
 
 .reviews {
     display: flex;
-    flex-direction: column; /* Mude para column para alinhar verticalmente */
+    flex-direction: column; /* Mantém as reviews alinhadas verticalmente */
     align-items: flex-start; /* Alinha os itens à esquerda */
     justify-content: flex-start; /* Inicia o conteúdo no topo */
     gap: 20px; /* Espaçamento entre reviews */
+    overflow-y: auto; /* Habilita a rolagem vertical se o conteúdo exceder a altura */
+    max-height: 500px; /* Ajuste conforme necessário para a altura desejada */
+    width: 100%; /* Certifique-se de que a largura esteja definida para preencher o contêiner pai */
+    padding-right: 15px; /* Adiciona espaço para a barra de rolagem */
+    margin-right: -15px; /* Ajusta o layout para acomodar o padding extra */
 }
 
 
+/* Estiliza a scrollbar para o Chrome, Edge, e Safari */
+.reviews::-webkit-scrollbar {
+    width: 1px; /* Largura da scrollbar */
+}
 
+.reviews::-webkit-scrollbar-track {
+    background: #f1f1f1; /* Cor de fundo da trilha da scrollbar */
+}
+
+.reviews::-webkit-scrollbar-thumb {
+    background: #888; /* Cor da scrollbar */
+    border-radius: 6px; /* Arredondamento das bordas da scrollbar */
+}
+
+.reviews::-webkit-scrollbar-thumb:hover {
+    background: #555; /* Cor da scrollbar ao passar o mouse */
+}
+
+/* Estiliza a scrollbar para o Firefox */
+.reviews {
+    scrollbar-width: thin; /* "auto" ou "thin" */
+    scrollbar-color: #888 #f1f1f1; /* Cor da scrollbar e da trilha */
+}
