--- a/src/assets/styles/SerieHubNoId.css
+++ b/src/assets/styles/SerieHubNoId.css
@@ -9,12 +9,12 @@
   
   .search-bar-container {
     text-align: center;
-    margin-bottom: 20px; /* Espaço inferior para separar os resultados da pesquisa */
+    margin-bottom: 1%; /* Espaço inferior para separar os resultados da pesquisa */
   }
   
   .search-results {
     text-align: center;
-    margin-top: 20px; /* Espaço superior para separar a barra de pesquisa */
+    margin-bottom: 1%; /* Espaço superior para separar a barra de pesquisa */
   }
   
   .search-results h2 {
