--- a/src/assets/styles/MySeries.css
+++ b/src/assets/styles/MySeries.css
@@ -1,56 +1,28 @@
-.tudoMySeries {
-  padding-top: 50px; /* Ajuste o valor conforme necessário */
+/* MySeries.css */
+.mySeriesContainer {
+  padding: 20px;
 }
 
-.watchedText {
-  color: white;
+.categorySection {
+  margin-bottom: 50px;
 }
 
-.containerMySeries {
+.categoryTitle {
+  color: rgb(255, 255, 255);
+  padding-left: 20px; /* Ajustar conforme necessário */
+  margin-bottom: 10px;
+}
+
+.mySeriesMovie {
   display: flex;
-  flex-direction: column;
-  margin-bottom: 20px; /* Ajuste conforme necessário para o espaçamento entre os containers */
+  justify-content: center;
+  align-items: center;
+  padding: 14px; /* Espaço dentro de cada SwiperSlide */
 }
 
-.containerWatched {
-  position: relative;
-  display: flex;
-  width: 100vh;
-  height: 30vh;
-  flex-direction: row;
-  justify-content: space-evenly;
-  padding-left: 4%;
+.mySeriesMovie img {
+  max-width: 110px; /* Ajustar para o tamanho desejado das miniaturas */
+  height: auto;
+  border-radius: 9px;
 }
 
-  .mySeriesMovie {
-    width: 150px; /* Ajuste o tamanho conforme necessário */
-    height: 225px; /* Ajuste o tamanho conforme necessário */
-    font-size: 1em;
-    text-align: center;
-    border-radius: 15px;
-    background-size: contain;
-    z-index: 1;
-    margin: 0 5px; /* Ajuste os valores conforme necessário (top right bottom left) */
-  }
-
-
-.containerLiked {
-  position: relative;
-  display: flex;
-  width: 100vh;
-  height: 30vh;
-  flex-direction: row;
-  justify-content: space-evenly;
-  padding-left: 4%;
-}
-
-
-.containerToWatch {
-  position: relative;
-  display: flex;
-  width: 100vh;
-  height: 30vh;
-  flex-direction: row;
-  justify-content: space-evenly;
-  padding-left: 4%;
-}
