--- a/src/assets/styles/Navbar.css
+++ b/src/assets/styles/Navbar.css
@@ -2,7 +2,7 @@
 .navbar {
   height: 80px;
   display: flex;
-  justify-content: start;
+  justify-content: flex-start;
   align-items: center;
   z-index: 2;
 }
@@ -34,7 +34,7 @@
 
 .nav-text, .navbar-toggle {
   display: flex;
-  justify-content: start;
+  justify-content: flex-start;
   align-items: center;
   padding: 8px 0px 8px 16px;
   list-style: none;
@@ -65,7 +65,7 @@
   width: 100%;
   height: 80px;
   display: flex;
-  justify-content: start;
+  justify-content: flex-start;
   align-items: center;
 }
 
