--- a/src/components/AutocompleteInput.css
+++ b/src/components/AutocompleteInput.css
@@ -1,23 +1,26 @@
 /* AutocompleteInput.css */
 .autocomplete-input-container {
   width: 100%;
+  
 }
 
 .autocomplete-input {
   width: 100%;
-  padding: 15px 10px;
   border: none;
   border-bottom: 1px solid #645979;
   outline: none;
-  border-radius: 5px 5px 0 0;
+  border-radius: 10px 10px 0 0;
   background-color: #ffffff;
   font-size: 16px;
+  align-items: center;
 }
+
 
 .list {
   width: 100%;
   background-color: #ffffff;
   border-radius: 0 0 5px 5px;
+  
 }
 
 .list-items {
