--- a/src/components/AutocompleteInput.css
+++ b/src/components/AutocompleteInput.css
@@ -9,7 +9,7 @@
   border: none;
   border-bottom: 1px solid #645979;
   outline: none;
-  border-radius: 10px 10px 10px 10px;
+  border-radius: 10px;
   background-color: #ffffff;
   font-size: 16px;
   align-items: center;
