--- a/src/components/AutocompleteInput2.css
+++ b/src/components/AutocompleteInput2.css
@@ -13,7 +13,8 @@
   font-size: 16px;
   align-items: center;
   margin-right: 20px;
-  margin-left: 475px; /* Ajuste conforme necessário */
+  margin-left: 475px; 
+  margin-top: 20px;/* Ajuste conforme necessário */
 }
 
 .autocomplete-input2-list {
@@ -25,7 +26,7 @@
   left: 0; /* Alinha a lista com a esquerda do input */
   z-index: 999;
   margin-left: 475px;
-  top: 45px; /* Garante que a lista esteja acima de outros elementos */
+  top: 60px; /* Garante que a lista esteja acima de outros elementos */
 }
 
 
